--- a/CommonAbout/src/main/res/layout/card_setting.xml
+++ b/CommonAbout/src/main/res/layout/card_setting.xml
@@ -9,9 +9,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="10dp"
+        android:paddingTop="24dp"
+        android:paddingBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/settings_drivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,8 +21,8 @@
 
         <ImageView
             android:id="@+id/settings_icon"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:scaleType="centerInside"
             android:src="@mipmap/icon"
             android:visibility="visible"
@@ -34,8 +36,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="16dp"
             android:ellipsize="end"
             android:textColor="@color/textColorPrimary"
             android:maxLines="1"
@@ -54,7 +56,7 @@
             android:textColor="@color/colorAccent"
             android:textSize="14dp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/settings_title"
+            app:layout_constraintBaseline_toBaselineOf="@+id/settings_title"
             app:layout_constraintEnd_toStartOf="@+id/settings_is_new"
             app:layout_constraintTop_toTopOf="@+id/settings_title"
             tools:text="前往" />
