--- a/Framework/src/main/res/values/common_string.xml
+++ b/Framework/src/main/res/values/common_string.xml
@@ -5,6 +5,12 @@
     <string name="app_desc">安卓开发组件 - 子勰</string>
     <string name="router_schema">zixie</string>
 
+    <string name="feedback_qq">2217661422</string>
+    <string name="feedback_url">https://support.qq.com/product/290858</string>
+    <string name="version_url"></string>
+    <string name="update_url"></string>
+    <string name="message_url"></string>
+
     <string name="common_tips_debug">测试版本，请勿外泄~</string>
     <string name="common_tips_waiting">功能开发中，敬请期待~</string>
     <string name="common_tips_restart">应用重启时会偶现白屏，请耐心等待</string>
@@ -25,6 +31,10 @@
     <string name="dialog_apk_version">版本号</string>
     <string name="dialog_apk_updating">版本 %1$s 更新中...</string>
     <string name="dialog_apk_update_info_pre">版本内容：&lt;BR&gt;</string>
+    <string name="dialog_apk_update_failed_desc">版本更新遇到异常，当前更新包可能存在问题，是否将问题反馈给开发者？</string>
+    <string name="dialog_apk_update_failed_negative">不反馈</string>
+    <string name="dialog_apk_update_failed_positive">反馈给开发者</string>
+
 
     <string name="custom_density">360</string>
 
