--- a/BaseDebug/src/main/res/layout/fragment_test_text.xml
+++ b/BaseDebug/src/main/res/layout/fragment_test_text.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <!--    <ScrollView-->
@@ -16,7 +15,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
-
 
         <Button
             android:id="@+id/test_basic_button"
@@ -30,29 +28,20 @@
         <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
             android:id="@+id/rtv_msg_tip"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:paddingLeft="4dp"
+            android:paddingTop="2dp"
+            android:paddingRight="4dp"
+            android:paddingBottom="2dp"
             android:text="12323"
             android:textColor="#00ffff"
-            android:textSize="11.5sp"
-            app:bgtv_backgroundColor="#ffffff"
-            app:bgtv_cornerRadius="5dp" />
-
-
-        <com.bihe0832.android.lib.ui.custom.view.ViewWithBackground
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:textSize="8dp"
             app:bgtv_backgroundColor="@color/red_dot"
-            app:bgtv_cornerRadius="25dp"
-            app:bgtv_strokeColor="#0000ff"
-            app:bgtv_strokeWidth="1dp" />
+            app:bgtv_isRadiusHalfHeight="true" />
+
+
+
 
 
         <TextView
@@ -145,6 +134,7 @@
             android:textColor="#716861"
             android:textSize="14dp"
             android:text="这是一个测试" />
+
 
     </LinearLayout>
 
