--- a/Framework/src/main/res/values/activity_theme.xml
+++ b/Framework/src/main/res/values/activity_theme.xml
@@ -88,7 +88,18 @@
         <item name="android:windowAnimationStyle">@style/AAF.Animation.Activity</item>
     </style>
 
-    <style name="AAF.ActivityTheme.Dialog" parent="AAF.ActivityTheme">
+    <!--    全屏，主要用于闪屏 -->
+    <style name="AAF.ActivityTheme.Fullscreen" parent="AAF.ActivityTheme">
+        <!--        应用启动使用背景-->
+        <item name="android:windowContentOverlay">@null</item>
+        <!--        内容衍生到状态栏-->
+        <item name="android:windowTranslucentNavigation">true</item>
+        <!--        弹框等顶部会有不透明状态栏-->
+        <item name="android:windowFullscreen">true</item>
+
+    </style>
+
+    <style name="AAF.ActivityTheme.Dialog" parent="AAF.ActivityTheme.Fullscreen">
         <item name="android:windowBackground">@android:color/transparent</item>
         <!--
         windowIsTranslucent 可以将应用了该 Style 的 Activity 所在的 Window 设置成透明的
@@ -98,10 +109,6 @@
         <item name="android:windowIsTranslucent">true</item>
         <!--  是否向下传递触摸事件，false 无背景-->
         <item name="android:splitMotionEvents">false</item>
-        <!--        应用启动使用背景-->
-        <item name="android:windowContentOverlay">@null</item>
-        <!--        内容衍生到状态栏-->
-        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <!--使用 bottomShare 主题的Activity 不要定义 screenOrientation -->
@@ -114,15 +121,6 @@
         <item name="android:windowAnimationStyle">@style/AAF.Animation.Alpha</item>
     </style>
 
-    <!--    全屏，主要用于闪屏 -->
-    <style name="AAF.ActivityTheme.Fullscreen" parent="AAF.ActivityTheme">
-        <!--        应用启动使用背景-->
-        <item name="android:windowContentOverlay">@null</item>
-        <!--        内容衍生到状态栏-->
-        <item name="android:windowTranslucentNavigation">true</item>
-        <!--        弹框等顶部会有不透明状态栏-->
-        <item name="android:windowFullscreen">true</item>
 
-    </style>
 
 </resources>
