卡片复用view bug 修复

--- a/BaseDebug/src/main/res/layout/card_demo_section_content_2.xml
+++ b/BaseDebug/src/main/res/layout/card_demo_section_content_2.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/demo_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:textColor="@android:color/holo_red_dark"
