--- a/CommonDebug/src/main/res/layout/com_bihe0832_fragment_debug_tab.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_fragment_debug_tab.xml
@@ -33,7 +33,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragment_list_info_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:clipChildren="false" />
 
     </LinearLayout>
