TTS 支持调整声音，稳定性优化完善

--- a/BaseDebug/src/main/res/layout/fragment_test_tts.xml
+++ b/BaseDebug/src/main/res/layout/fragment_test_tts.xml
@@ -123,6 +123,30 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/tts_volume_incre"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="增加音量"
+                android:textSize="16dp" />
+
+            <Button
+                android:id="@+id/tts_volume_decre"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="降低音量"
+                android:textSize="16dp" />
+
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
