网络切变监控相关代码

--- a/BaseDebug/src/main/res/layout/fragment_test_tts.xml
+++ b/BaseDebug/src/main/res/layout/fragment_test_tts.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="上车上车 上星上分"
+            android:text="上车、上车，上星。上分#上车|上车；上星:上分"
             android:textSize="20dp" />
 
         <TextView
