--- a/CommonShare/src/main/res/layout/common_activity_share_apk.xml
+++ b/CommonShare/src/main/res/layout/common_activity_share_apk.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="32dp"
+            android:padding="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +95,12 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/share_apk_panel_send_source"
+                style="@style/shareItemText"
+                android:drawableTop="@drawable/share_android"
+                android:text="发送APK" />
 
             <TextView
                 android:id="@+id/share_apk_panel_send"
