二维码识别、扫码、生成基础库完善，震动及音乐播放完善，分享优化，更具有扩展性，增加通过二维码分享链接。优化分享应用的逻辑、修复哀悼日与分辨率共用变量的bug、获取本地资源的bitmap优化、通用Icon 资源整理

--- a/BaseDebug/src/main/res/layout/dialog_test_permission.xml
+++ b/BaseDebug/src/main/res/layout/dialog_test_permission.xml
@@ -10,7 +10,7 @@
             android:layout_width="0dp"
             app:layout_constrainedWidth="true"
             android:layout_height="wrap_content"
-            android:textColor="@color/corner_color"
+            android:textColor="@color/colorPrimary"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:textSize="18dp"
@@ -34,7 +34,7 @@
             android:lineSpacingMultiplier="1.75"
             android:scrollbars="vertical"
             android:textSize="14dp"
-            android:textColor="@color/corner_color"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintTop_toBottomOf="@+id/dialog_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
