--- a/CommonNavigationDrawer/src/main/res/layout/com_bihe0832_activity_navigation_drawer.xml
+++ b/CommonNavigationDrawer/src/main/res/layout/com_bihe0832_activity_navigation_drawer.xml
@@ -66,7 +66,8 @@
         <FrameLayout
             android:id="@+id/common_fragment_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/windowBackground"
             android:scrollbars="none" />
     </LinearLayout>
 
