--- a/LibFlycoTabLayout/src/main/res/layout/layout_tab_top.xml
+++ b/LibFlycoTabLayout/src/main/res/layout/layout_tab_top.xml
@@ -26,7 +26,7 @@
             android:singleLine="true"/>
     </LinearLayout>
 
-    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
+    <com.bihe0832.android.lib.ui.custom.view.background.TextViewWithBackground
         android:id="@+id/rtv_msg_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
