--- a/BaseDebug/src/main/res/layout/fragment_test_text.xml
+++ b/BaseDebug/src/main/res/layout/fragment_test_text.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/transparent_background"
     android:orientation="vertical">
 
     <!--    <ScrollView-->
@@ -25,7 +26,7 @@
             android:text="切换数据"
             android:textSize="16dp" />
 
-        <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
+        <com.bihe0832.android.lib.ui.custom.view.background.TextViewWithBackground
             android:id="@+id/rtv_msg_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +38,7 @@
             android:text="12323"
             android:textColor="#00ffff"
             android:textSize="8dp"
-            app:bgtv_backgroundColor="@color/red_dot"
+            app:bgtv_backgroundColor="@color/com_bihe0832_dialog_bg"
             app:bgtv_isRadiusHalfHeight="true" />
 
         <com.bihe0832.android.lib.ui.textview.marquee.MarqueeTextView
