--- a/LibFlycoTabLayout/src/main/res/layout/layout_tab.xml
+++ b/LibFlycoTabLayout/src/main/res/layout/layout_tab.xml
@@ -27,7 +27,7 @@
         tools:src="@mipmap/share_link"
         tools:visibility="gone" />
 
-    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
+    <com.bihe0832.android.lib.ui.custom.view.background.TextViewWithBackground
         android:id="@+id/rtv_msg_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
