--- a/LibFlycoTabLayout/src/main/res/layout/layout_tab_bottom.xml
+++ b/LibFlycoTabLayout/src/main/res/layout/layout_tab_bottom.xml
@@ -28,7 +28,7 @@
 
     </LinearLayout>
 
-    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
+    <com.bihe0832.android.lib.ui.custom.view.background.TextViewWithBackground
         android:id="@+id/rtv_msg_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
